[workspace]
resolver = "2"
members = [
    "packages/*",
    "contracts/*"
]

[workspace.dependencies]
cosmwasm-std = "1.5"
cw-storage-plus = "1.2"
cw2 = "1"
thiserror = "1.0"
itertools = "0.12"
cosmwasm-schema = "1.5"
cw-utils = "1"
astroport = { git = "https://github.com/astroport-fi/hidden_astroport_core", version = "5.3.0" }

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[patch.'https://github.com/astroport-fi/hidden_astroport_governance']
astroport-governance = { path = "packages/astroport-governance" }
