[workspace]
resolver = "2"
members = [
    "packages/*",
    "contracts/emissions_controller_outpost",
    "contracts/voting_escrow",
]

[workspace.dependencies]
cosmwasm-std = "1.5"
cw-storage-plus = "1.2"
cw2 = "1"
thiserror = "1.0"
itertools = "0.12"
cosmwasm-schema = "1.5"
cw-utils = "1"
astroport = "5.7.0-cw1.0"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
