[package]
name = "astro-assembly"
version = "3.0.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport DAO Contract"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
testnet = []
library = []

[dependencies]
cw2.workspace = true
cosmwasm-std = { workspace = true, features = ["ibc3", "cosmwasm_1_1"] }
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
cw-utils.workspace = true
astroport-governance = { path = "../../packages/astroport-governance", version = "4" }
astroport.workspace = true
astro-satellite = { version = "1.1.0", features = ["library"] }
ibc-controller-package = "1.0.0"

[dev-dependencies]
cw-multi-test = { git = "https://github.com/astroport-fi/cw-multi-test", branch = "feat/bank_with_send_hooks", features = ["cosmwasm_1_1"] }
osmosis-std = "0.21"
astroport-staking = { git = "https://github.com/astroport-fi/hidden_astroport_core", version = "2" }
astroport-tokenfactory-tracker = { git = "https://github.com/astroport-fi/hidden_astroport_core", version = "1" }
astroport-voting-escrow = { path = "../voting_escrow", version = "1.0", features = ["library"] }
builder-unlock = { path = "../builder_unlock", version = "3" }
anyhow = "1"
test-case = "3.3.1"