[package]
name = "astro-assembly"
version = "3.0.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport DAO Contract"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
testnet = []
library = []

[dependencies]
cw2.workspace = true
cosmwasm-std = { workspace = true, features = ["ibc3", "cosmwasm_1_1"] }
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
cw-utils.workspace = true
astroport-governance = { path = "../../packages/astroport-governance", version = "4.0.0" }
astroport = "4"
ibc-controller-package = "1.0.0"

[dev-dependencies]
cw-multi-test = { git = "https://github.com/astroport-fi/cw-multi-test", branch = "feat/bank_with_send_hooks", features = ["cosmwasm_1_1"] }
osmosis-std = "0.25.0"
astroport-staking = "2.1"
astroport-tokenfactory-tracker = { version = "1", features = ["library"] }
astroport-voting-escrow = { path = "../voting_escrow", version = "1.0.0", features = ["library"] }
builder-unlock = { version = "3", features = ["library"] }
anyhow = "1"
test-case = "3.3.1"