[package]
name = "builder-unlock"
version = "1.2.3"
authors = ["Astroport"]
edition = "2021"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
astroport-governance = { path = "../../packages/astroport-governance" }
astroport = { git = "https://github.com/astroport-fi/astroport-core", branch = "merge/release" }
thiserror = { version = "1.0" }
cosmwasm-schema = "1.1"

[dev-dependencies]
cw-multi-test = "0.15"
astroport-token = { git = "https://github.com/astroport-fi/astroport-core", branch = "merge/release" }
