[package]
name = "builder-unlock"
version = "3.0.0"
authors = ["Astroport"]
edition = "2021"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = "1.1"
cw-utils = "1"
cosmwasm-std = "1.5"
cw-storage-plus = "0.15"
astroport-governance = { path = "../../packages/astroport-governance", version = "2" }
astroport = { git = "https://github.com/astroport-fi/hidden_astroport_core" }
cosmwasm-schema = "1.5"

[dev-dependencies]
cw-multi-test = "0.20"