[package]
name = "builder-unlock"
version = "3.0.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport Builders Unlock Contract"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2.workspace = true
cw-utils.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cosmwasm-schema.workspace = true
thiserror.workspace = true
astroport-governance = "3"
astroport.workspace = true

[dev-dependencies]
cw-multi-test = "0.20"