[package]
name = "astroport-emissions-controller-outpost"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport vxASTRO Emissions Voting Contract. Outpost version"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2.workspace = true
cw-utils.workspace = true
cosmwasm-std = { workspace = true, features = ["ibc3"] }
cw-storage-plus.workspace = true
cosmwasm-schema.workspace = true
thiserror.workspace = true
itertools.workspace = true
astroport-governance = { path = "../../packages/astroport-governance", version = "3" }
astroport.workspace = true
serde_json = "1"

[dev-dependencies]
cw-multi-test = "1"
astroport-voting-escrow = { path = "../voting_escrow", version = "1", features = ["library"] }
astroport-factory = { version = "1.7", features = ["library"] }
astroport-pair = { version = "1.5", features = ["library"] }
cw20-base = { version = "1", features = ["library"] }
astroport-incentives = { git = "https://github.com/astroport-fi/hidden_astroport_core", branch = "feat/incentivize_many", version = "1.2" }
derivative = "2.2"
