[package]
name = "astroport-emissions-controller-outpost"
version = "1.1.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport vxASTRO Emissions Voting Contract. Outpost version"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2.workspace = true
cw-utils.workspace = true
cosmwasm-std = { workspace = true, features = ["ibc3"] }
cw-storage-plus.workspace = true
cosmwasm-schema.workspace = true
thiserror.workspace = true
itertools.workspace = true
astroport-governance = { path = "../../packages/astroport-governance", version = "4.2.1-cw1.0" }
astroport.workspace = true
serde_json = "1"
