[package]
name = "astroport-escrow-fee-distributor"
version = "1.0.0"
authors = ["Astroport"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = { version = "0.8" }
cw20 = { version = "0.8" }
cosmwasm-std = { version = "0.16.2" }
cw-storage-plus = {version = "0.8.0", features = ['iterator']}
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
astroport = {git = "https://github.com/astroport-fi/astroport.git", tag = "v1.0.0"}
thiserror = { version = "1.0.24" }
astroport-governance = { path = "../../packages/astroport-governance", default-features = false, version = "1.0.0"}

[dev-dependencies]
cosmwasm-schema = { version = "0.16.2", default-features = false  }
terra-multi-test = {git = "https://github.com/astroport-fi/terra-plus.git", tag = "v0.9.1-terra"}
astroport-token = {git = "https://github.com/astroport-fi/astroport.git", branch = "master", package = "astroport-token"}
astroport-governance-voting = { git = "https://github.com/astroport-fi/astroport-governance.git", package = "astroport-governance", branch = "feat/astro_voting_escrow"}
astroport-tests = {git = "https://github.com/astroport-fi/astroport-governance.git", branch = "feat/astroport-tests-package", package = "astroport-tests"}
