[package]
name = "astroport-escrow-fee-distributor"
version = "1.0.0"
authors = ["Astroport"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = "0.13"
cw20 = "0.13"
cosmwasm-std = "1.0"
cw-storage-plus = "0.13"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
astroport-governance = { path = "../../packages/astroport-governance" }

[dev-dependencies]
cosmwasm-schema = "1.0"
cw-multi-test = "0.13"
astroport-token = {git = "https://github.com/astroport-fi/astroport-core.git", branch = "release/terra2"}
astroport-tests = {path = "../../packages/astroport-tests"}