[package]
name = "astroport-escrow-fee-distributor"
version = "1.0.0"
authors = ["Astroport"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
astroport-governance = { path = "../../packages/astroport-governance" }
cosmwasm-schema = "1.1"

[dev-dependencies]
cw-multi-test = "0.15"
astroport-token = {git = "https://github.com/astroport-fi/astroport-core.git", branch = "feat/miggrate-to-cosmwasm-1.1-release/terra2"}
astroport-tests = {path = "../../packages/astroport-tests"}