[package]
name = "astroport-escrow-fee-distributor"
version = "1.0.1"
authors = ["Astroport"]
edition = "2021"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
ap-escrow-fee-distributor = { path = "../../packages/escrow_fee_distributor" }
ap-voting-escrow = { path = "../../packages/voting_escrow" }
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "feat/separate_astroport_package" }
astroport-governance = { path = "../../packages/astroport_governance" }
cosmwasm-schema = "1.1"

[dev-dependencies]
cw-multi-test = "0.15"
astroport-tests = { path = "../../packages/astroport_tests" }
