[package]
name = "astroport-generator-controller"
version = "1.1.1"
authors = ["Astroport"]
edition = "2021"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"
license = "GPL-3.0-only"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
itertools = "0.10"
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "feat/separate_astroport_package" }
ap-pair = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "feat/separate_astroport_package" }
ap-factory = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "feat/separate_astroport_package" }
ap-generator = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "feat/separate_astroport_package" }
ap-generator-controller = { path = "../../packages/generator_controller" }
ap-voting-escrow = { path = "../../packages/voting_escrow" }
astroport-governance = { path = "../../packages/astroport_governance" }
cosmwasm-schema = "1.1"

[dev-dependencies]
cw-multi-test = "0.15"
astroport-tests = { path = "../../packages/astroport_tests" }
anyhow = "1"
proptest = "1.0"
