[package]
name = "generator-controller"
version = "1.2.0"
authors = ["Astroport"]
edition = "2021"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
itertools = "0.10"
astroport-governance = { path = "../../packages/astroport-governance" }
cosmwasm-schema = "1.1"

[dev-dependencies]
cw-multi-test = "0.15"
astroport-tests = { path = "../../packages/astroport-tests" }

astroport-generator = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "fix/sync_deps" }
astroport-pair = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "fix/sync_deps" }
astroport-factory = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "fix/sync_deps" }
astroport-token = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "fix/sync_deps" }
astroport-staking = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "fix/sync_deps" }
astroport-whitelist = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "fix/sync_deps" }

cw20 = "0.15"
voting-escrow = { path = "../voting_escrow" }
anyhow = "1"
proptest = "1.0"
