[package]
name = "astroport-nft"
version = "1.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Orkun Külçe <orkun@deuslabs.fi>", "Astroport"]
edition = "2021"
description = "Expanded implementation of cw721 NFTs compliant token for the Astroport NFT"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-nfts"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = "0.13"
cw721 = "0.13"
cw721-base = { version = "0.13", features = ["library"] }
cosmwasm-std = "1.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
astroport-governance = { path = "../../packages/astroport-governance" }

[dev-dependencies]
cosmwasm-schema = "1.0"