[package]
name = "astroport-outpost"
version = "0.1.0"
authors = ["Astroport"]
edition = "2021"
description = "Forwards interchain actions to the Astroport Hub"
license = "GPL-3.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2 = "1.0.1"
cw20 = "0.15"
cosmwasm-schema = "1.1.0"
cw-utils = "1.0.1"
cosmwasm-std = { version = "1.1.0", features = ["iterator", "ibc3"] }
cw-storage-plus = "0.15"
schemars = "0.8.12"
semver = "1.0.17"
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
thiserror = "1.0.40"
astroport = { git = "https://github.com/astroport-fi/hidden_astroport_core" }
astroport-governance = { path = "../../packages/astroport-governance" }
serde-json-wasm = "0.5.1"
base64 = { version = "0.13.0" }

[dev-dependencies]
cw-multi-test = "0.16.5"
anyhow = "1.0"
