[package]
name = "astroport-tributes"
version = "1.1.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport vxASTRO Tributes Contract"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw-storage-plus.workspace = true
cosmwasm-schema.workspace = true
cw2.workspace = true
thiserror.workspace = true
cosmwasm-std.workspace = true
cw-utils.workspace = true
cw20 = "1.1"
astroport-governance = { path = "../../packages/astroport-governance", version = "4.5" }
astroport.workspace = true
itertools.workspace = true

[dev-dependencies]
astroport-factory = { git = "https://github.com/astroport-fi/astroport-core", version = "1.9", features = ["library"] }
astroport-pair = { version = "2", features = ["library"] }
astroport-emissions-controller = { path = "../emissions_controller", version = "1.0.0", features = ["library"] }
astroport-voting-escrow = { path = "../voting_escrow", version = "1.2.0", features = ["library"] }
cw-multi-test = { version = "1.2.0", features = ["cosmwasm_1_1"] }
cw20-base = { version = "1", features = ["library"] }
anyhow = "1"
osmosis-std = "0.25.0"
neutron-sdk = "0.10.0"
itertools.workspace = true