[package]
name = "astroport-voting-escrow"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport Vote Escrowed xASTRO (vxASTRO)"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2.workspace = true
cw20 = "1"
cw-utils = "1"
cw20-base = { version = "1", features = ["library"] }
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
astroport-governance = { path = "../../packages/astroport-governance", version = "3" }
astroport = { git = "https://github.com/astroport-fi/hidden_astroport_core", version = "4" }

[dev-dependencies]
cw-multi-test = { git = "https://github.com/astroport-fi/cw-multi-test", branch = "feat/bank_with_send_hooks", features = ["cosmwasm_1_1"] }
astroport-staking = { git = "https://github.com/astroport-fi/hidden_astroport_core", version = "2" }
anyhow = "1"
proptest = "1.0"
