[package]
name = "astroport-voting-escrow"
version = "1.2.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport Vote Escrowed xASTRO (vxASTRO)"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2.workspace = true
cw20 = "1"
cw-utils = "1"
cw20-base = { version = "1", features = ["library"] }
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
astroport-governance = { path = "../../packages/astroport-governance", version = "4.2.1-cw1.0" }
astroport.workspace = true

[dev-dependencies]
cw-multi-test = "1"
