[package]
name = "voting-escrow-delegation"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0"
cw-storage-plus = "0.13"
cw-utils = "0.13"
cw2 = "0.13"
schemars = "0.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
astroport-governance = { path = "../../packages/astroport-governance" }
cw721 = "0.13"
cw721-base = { version = "0.13", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13"
astroport-tests = {path = "../../packages/astroport-tests"}
astroport-nft = { path = "../nft"}