[package]
name = "voting-escrow-delegation"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
cw-utils = "0.15"
cw2 = "0.15"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0.31" }
astroport-governance = { path = "../../packages/astroport-governance" }
cw721 = "0.15"
cw721-base = { version = "0.15.0", features = ["library"] }
cosmwasm-schema = "1.1"

[dev-dependencies]
cw-multi-test = "0.15"
astroport-tests = {path = "../../packages/astroport-tests"}
astroport-nft = { path = "../nft"}
anyhow = "1"
proptest = "1.0.0"