[package]
name = "astroport-voting-escrow-delegation"
version = "1.0.1"
authors = ["Astroport"]
edition = "2021"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []


[dependencies]
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
cw-utils = "0.15"
cw2 = "0.15"
thiserror = { version = "1.0" }
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "feat/separate_astroport_package" }
astroport-governance = { path = "../../packages/astroport_governance" }
ap-voting-escrow = { path = "../../packages/voting_escrow" }
ap-voting-escrow-delegation = { path = "../../packages/voting_escrow_delegation" }
cw721 = "0.15"
cw721-base = { version = "0.15", features = ["library"] }
cosmwasm-schema = "1.1"

[dev-dependencies]
cw-multi-test = "0.15"
astroport-tests = { path = "../../packages/astroport_tests" }
astroport-nft = { path = "../nft" }
anyhow = "1"
proptest = "1.0"
